# reslock

./: .gitignore  AGENTS.md  README.md  idea_reslock.md  pyproject.toml
.github/workflows/: publish.yml
examples/: llama_server_proxy.py
src/reslock/: __init__.py  audit.py  cleanup.py  cli.py  detect.py  models.py  nvml.py  pool.py  resources.py  state.py
tasks/: aiserver-eta-integration.md  docker-pid-namespace-support.md  entry-complete-silent-failure.md  uuid-keyed-gpu-resources.md
tests/: conftest.py  test_audit.py  test_cleanup.py  test_cli.py  test_entries.py  test_gpu_keys.py  test_nvml.py  test_pool.py  test_pool_nvml.py  test_scheduler.py  test_state.py  test_windows_compat.py
