[project]
name = "reslock"
version = "0.3.3"
description = "Resource lock manager for coordinating shared system resources (GPU VRAM, RAM, CPU) across processes"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Moritz Möller", email = "mm@mxs.de" }]
keywords = ["gpu", "vram", "resource", "lock", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "portalocker>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
reslock = "reslock.cli:main"

[project.urls]
Homepage = "https://github.com/mo22/reslock"
Repository = "https://github.com/mo22/reslock"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reslock"]

[tool.hatch.build.targets.sdist]
include = ["src/reslock"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults (needed for Click)
]

[tool.ruff.lint.isort]
known-first-party = ["reslock"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
ignore = ["**/node_modules", "**/__pycache__"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
